Created SearchActivity and PersonFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="home">Home</string>
     <string name="post">post</string>
     <string name="name">SDUgram</string>
+    <string name="search">Search</string>
 </resources>
